@@ -14,18 +14,13 @@ from . import UIPart
 import globals as G
 import util.opengl
 import Language
+from util.enums import ButtonMode
 
 image = ResourceLocator.read("gui/widgets", "pyglet")
 disabled = image.get_region(2, 256-46-17, 196, 15)
 enabled = image.get_region(2, 256-66-17, 196, 14)
 hovering = image.get_region(2, 256-86-17, 196, 15)
 #  enabled.save(G.local+"/tmp/minecraft.png")  # only for debugging reasons
-
-
-class ButtonMode(enum.Enum):
-    DISABLED = 0
-    ENABLED = 1
-    HOVERING = 2
 
 
 IMAGES = {ButtonMode.DISABLED: disabled, ButtonMode.ENABLED: enabled, ButtonMode.HOVERING: hovering}
